# tikko

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.lan.yml  package.json  pnpm-lock.yaml  turbo.json
apps/api/: Dockerfile  README.md  pyproject.toml  tikko-dev.db
apps/api/alembic/: env.py
apps/api/alembic/versions/: 15745463cdad_totp_recovery_codes.py  2823730c4ea4_shift_rules.py  598bccf9f7db_leave_requests.py  7764e1168d9e_departments.py  83c2589798f3_holidays.py  8c51c515c891_initial_schema.py  a64e1b05083a_role_permissions.py  b2d4cc7dbe00_user_totp.py  b81568a7036b_manual_attendance.py  ca280c92f92f_leave_types_and_balances.py  fe86e36e0ac1_audit_events.py
apps/api/src/tikko/: __init__.py  adms.py  audit.py  db.py  email.py  main.py  permissions.py  realtime.py  scheduler.py  settings.py
apps/api/tests/: conftest.py  test_attendance.py  test_audit_log.py  test_auth.py  test_auth_guards.py  test_auth_me.py  test_auth_totp.py  test_change_password.py  test_departments.py  test_devices.py  test_email.py  test_employee_import.py  test_employee_templates.py  test_employee_templates_push.py  test_employees.py  test_employees_sync.py  test_health.py  test_holidays.py  test_iclock_adms.py  test_leave_decisions.py  test_leave_requests.py  test_leave_types.py  test_manual_punch.py  test_me_attendance.py  test_payroll_calc.py  test_payroll_month.py  test_permissions.py  test_reports.py  test_scheduler.py  test_settings.py  test_shift_rules.py  test_totp_recovery.py  test_users.py  test_ws_attendance.py  test_zk_fake.py  test_zk_test_connection.py
(+138 files in other folders)
